# WebAssemblyFinalProject

./: Cargo.toml  Makefile  README.md  binfmt_wasm.c  dl_functions.rs  helpers.rs  wasm_launcher.c  wasm_launcher.rs
cpp-test-code/: app.cpp  mult.cpp  mult2.cpp  test-dlopen.cpp
