[package]
name = "wasm-launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = { version = "19.0.0", features = ["async"] }
anyhow = "1.0.80"
wasmtime-wasi = { version = "19.0.0", features = ["preview1"] }
once_cell = "1.21.3"
parking_lot = "0.12.3"

[[bin]]
name = "wasm-launcher"
path = "wasm_launcher.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
